<resources>

    <string name="app_name">Catalogue</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Catalogue</string>
    
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="tv_no_categories">There are no categories</string>
    <string name="tv_no_locations">There are no locations</string>
    <string name="tv_no_items">There are no items</string>
    
    <string name="toast_category_deleted">Category deleted</string>
    <string name="toast_category_saved">Category saved</string>
    <string name="toast_category_saved_error">Category not saved</string>
    <string name="toast_category_updated">Category updated</string>
    
	<string name="toast_location_deleted">Location deleted</string>
    <string name="toast_location_saved">Location saved</string>
    <string name="toast_location_saved_error">Location not saved</string>
    <string name="toast_location_updated">Location updated</string>
    
   	<string name="toast_item_deleted">Item deleted</string>
    <string name="toast_item_saved">Item saved</string>
    <string name="toast_item_saved_error">Item not saved</string>
    <string name="toast_item_updated">Item updated</string>
    
    <string name="toast_invalid_category_title">Please enter a title</string>
    <string name="toast_invalid_location_title">Please enter a title</string>
    
    <string name="root_category_title">All</string>
    <string name="root_location_title">All</string>
    
    <string name="title_categories">Categories</string>
    <string name="title_locations">Locations</string>
    <string name="title_category_new">New</string>
    <string name="title_item_add">New</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_view">Item</string>
    <string name="title_category_selector">Choose</string>
    <string name="title_location_selector">Choose</string>
    <string name="title_search">Search</string>
    <string name="title_read_nfc_activity">NFC</string>
    
    <string name="tv_num_cat_children_title">No. Sub-Categories: </string>
    <string name="tv_num_items_title">No. Items: </string>
    
    <string name="tv_num_loc_children_title">No. Sub-Locations: </string>
    
    <string name="tv_item_list_title">Items</string>
    <string name="tv_item_add_title">Item Add</string>
    <string name="tv_search_title">Search</string>
    <string name="tv_item_nfc_title">NFC</string>
    <string name="tv_item_barcode_title">Barcode</string>
    
    <string name="bt_item_add_nfc">Add NFC</string>
    <string name="bt_item_add_barcode">Add Barcode</string>
    
    <string name="tv_item_title_title">Title:</string>
    <string name="tv_item_description_title">Description:</string>
    <string name="tv_item_categories_title">Categories:</string>
    <string name="tv_item_locations_title">Locations:</string>
    <string name="tv_item_photo_title">Photo:</string>
    <string name="tv_item_quantity_title">Quantity:</string>
    
    <string name="et_item_title_hint">Title</string>
    <string name="et_item_description_hint">Description</string>
    
    <string name="bt_item_add_category">Add Category</string>
    <string name="bt_item_add_location">Add Location</string>
    <string name="bt_take_photo">Take Photo</string>
    
    <string name="bt_save">Save</string>
    <string name="bt_cancel">Cancel</string>
    
    <string name="et_search_hint">Search</string>
    
    <string name="toast_generic_error">Sorry, an error occured</string>
    
    <string name="et_category_title_hint">Title</string>
    <string name="et_location_title_hint">Title</string>
    
    <string name="context_category_delete">Delete</string>
    <string name="context_category_edit">Edit</string>
    <string name="context_category_heading">Choose</string>
    <string name="context_location_delete">Delete</string>
    <string name="context_location_edit">Edit</string>
    <string name="context_location_heading">Choose</string>
    <string name="context_item_delete">Delete</string>
    <string name="context_item_edit">Edit</string>
    <string name="context_item_heading">Choose</string>

    <string name="confirm_category_delete_message">Are you sure you want to delete this category?</string>
    <string name="confirm_category_delete_positive">Yes</string>
    <string name="confirm_category_delete_negative">No</string>
    
    <string name="confirm_location_delete_message">Are you sure you want to delete this location?</string>
    <string name="confirm_location_delete_positive">Yes</string>
    <string name="confirm_location_delete_negative">No</string>
    
    <string name="confirm_item_delete_message">Are you sure you want to delete this item?</string>
    <string name="confirm_item_delete_positive">Yes</string>
    <string name="confirm_item_delete_negative">No</string>
    
    <string name="menu_add_category">Add Category</string>
    <string name="menu_add_location">Add Location</string>
    <string name="menu_add_item">Add Item</string>
    <string name="menu_edit_item">Edit Item</string>
    
    <string name="context_heading">Choose</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    
    <string name="bt_popup_delete_positive">Yes</string>
    <string name="bt_popup_delete_negative">Cancel</string>
    <string name="tv_popup_delete_category">Are you sure you want to delete this category? All sub categories will also be deleted. All items will be kept but have no category.</string>
    <string name="tv_popup_delete_location">Are you sure you want to delete this location? All sub locations will also be deleted. All items will be kept but have no location.</string>
    <string name="tv_popup_delete_item">Are you sure you want to delete this item?</string>
    
    <string name="bar_title_delete">Delete?</string>
    
    <string name="tv_tag_exists_warning">WARNING! This tag is associated to something already, if you proceed it will be removed from its previous association.</string>
    <string name="tv_barcode_exists_warning">WARNING! This barcode is associated to something already, if you procedd it will be removed from its previous association.</string>
    <string name="tv_barcode_not_found_warning">WARNING! No barcode was found</string>
    <string name="tv_details_title">Details:</string>
    
    
    <string name="tv_type_title_item">Item</string>
    <string name="tv_type_title_category">Category</string>
    <string name="tv_type_title_location">Location</string>
    
    <string-array name="array_nav_menu">
        <item>Items</item>
        <item>Locations</item>
        <item>Categories</item>
        <item>Search</item>
    </string-array>
</resources>