<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:scrollbars="none">
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
		<LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_alignParentTop="true"
		    android:orientation="vertical"
		    android:id="@+id/ll_item_details_wrapper">
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/et_item_title"
		        android:hint="@string/tv_item_title_title">
		    </EditText>
		    
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/et_item_description"
		        android:lines="4"
		        android:hint="@string/tv_item_description_title">
		    </EditText>
		    
		   	<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_item_quantity_title"
		        style="@style/heading_two">
		    </TextView>
		   	<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/tv_item_quantity"
		        style="@style/heading_two">
		    </TextView>
		    
			<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_item_photo_title"
		        style="@style/heading_two">
		    </TextView>
			<ImageView
			    android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/iv_photo">
			</ImageView>
		  	<Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_take_photo"
		        android:text="@string/bt_take_photo">
		    </Button>
		   	
		   	<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_item_categories_title"
		        style="@style/heading_two">
		    </TextView>
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/ll_item_categories"
		        android:orientation="vertical">
		    </LinearLayout>
		    <Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_add_category"
		        android:text="@string/bt_item_add_category">
		    </Button>
		    
		   	<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_item_locations_title"
		        style="@style/heading_two">
		    </TextView>
		   	<LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/ll_item_locations"
		        android:orientation="vertical">
		    </LinearLayout>
		  	<Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_add_location"
		        android:text="@string/bt_item_add_location">
		    </Button>
		    
		  	<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_item_nfc_title"
		        style="@style/heading_two">
		    </TextView>
		  	<TextView
		  	    android:id="@+id/tv_nfc_id" 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		    </TextView>
            <TextView
                android:id="@+id/tv_nfc_tag_exists_warning"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_tag_exists_warning"
	            android:visibility="gone">
	        </TextView>
		  	<Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_add_nfc_id"
		        android:text="@string/bt_item_add_nfc">
		    </Button>
		    
			<TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_item_barcode_title"
		        style="@style/heading_two">
		    </TextView>
		  	<TextView
		  	    android:id="@+id/tv_barcode_id" 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		    </TextView>
            <TextView
                android:id="@+id/tv_barcode_exists_warning"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_barcode_exists_warning"
	            android:visibility="gone">
	        </TextView>
            <TextView
                android:id="@+id/tv_barcode_not_found_warning"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_barcode_not_found_warning"
	            android:visibility="gone">
	        </TextView>
		  	<Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_add_barcode_id"
		        android:text="@string/bt_item_add_barcode">
		    </Button>
		</LinearLayout>
		<LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_below="@id/ll_item_details_wrapper"
		    android:orientation="horizontal"
		    android:id="@+id/ll_controls"
		    android:weightSum="1.0">
		  	<Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_save"
		        android:text="@string/bt_save"
		        android:layout_weight="0.5">
		    </Button>
		    <Button 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/bt_cancel"
		        android:text="@string/bt_cancel"
		        android:layout_weight="0.5">
		    </Button>
		</LinearLayout>
	</RelativeLayout>
</ScrollView>