<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_content">
    
	<EditText
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:id="@+id/et_category_title"
	    android:hint="@string/et_category_title_hint">
	</EditText>
	<LinearLayout
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal"
	    android:id="@+id/ll_controls"
	    android:weightSum="1.0">
	  	<Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/bt_save"
	        android:text="@string/bt_save"
	        android:layout_weight="0.5">
	    </Button>
	    <Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/bt_cancel"
	        android:text="@string/bt_cancel"
	        android:layout_weight="0.5">
	    </Button>
	</LinearLayout>
</LinearLayout>