<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<EditText
	    android:id="@+id/et_new_category"
	    android:hint="@string/et_category_title_hint"
	    android:inputType="textCapSentences"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true">
	</EditText>
	<LinearLayout
	    android:id="@+id/ll_controls"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true">
	    <Button
	        android:id="@+id/bt_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bt_cancel"
	        android:layout_weight="1">
	    </Button>
	    <Button
	        android:id="@+id/bt_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bt_save"
	        android:layout_weight="1">
	    </Button>
	</LinearLayout>
</RelativeLayout>